[tool.poetry]
name = "liquid_time_constant_networks"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">= 3.9, < 3.10"
pandas = "^1.3.4"
numpy = "^1.21.4"
tensorflow = "^2.7.0"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
